# dxgiformatconvert

./: .gitattributes  .gitignore  D3DX_DXGIFormatConvert.inl  LICENSE  README.md
.github/workflows/: legacy.yml  main.yml  msvc.yml  vcpkg.yml
Tests/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  F10UI.hlsl  F10UN.hlsl  F16F.hlsl  F16S.hlsl  F16SI.hlsl  F16U.hlsl  F16UI.hlsl  F8S.hlsl  F8SI.hlsl  F8U.hlsl  F8UI.hlsl  F8US.hlsl  FB8U.hlsl  FB8US.hlsl  FBX8U.hlsl  FBX8US.hlsl  fmtconvert.cpp  fmtconverttest.hlsli
